--- a/sass/components/_MODAL.scss
+++ b/sass/components/_MODAL.scss
@@ -121,6 +121,7 @@
 
     color: rgba(117, 117, 117, 0.5);
 }
+
 .modal-form-agreement {
     position: relative;
     display: flex;
@@ -188,8 +189,9 @@
     border-radius: 4px;
     border-color: transparent;
     border-width: 0;
-}
-.modal-form-btn:hover, .modal-form-btn:focus {
-    background: #188CE8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    &:hover, &:focus {
+        background: #188CE8;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 }
