--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,45 +1,53 @@
 .portfolio {
     @extend %section;
-}
-.portfolio__list {
-    /* border: 1px solid #EEEEEE;*/
+
+&__list {
      display: flex;
      flex-wrap: wrap;
       
  }
- .portfolio__link {
+ &__item {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE; 
+    &:nth-child(3n) {
+       margin-right: 0;
+   }
+   &:nth-last-child(-n + 3) {
+       margin-bottom: 0;
+   } 
+}
+ &__link {
      display: block;
      text-decoration: none;
  
      transition: color var(--time) var(--function-time);
+     &:hover, &:focus{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
  }
- .portfolio__card {
+ &__inf {
+    position: relative;
+    width: 370px;
+    height: 294px;
+    overflow: hidden;
+}
+ &__card {
      display: block;
      max-width: 100%;
      height: auto;
  
  }  
- .portfolio__item-card {
+ &__item-card {
      padding: 20px 24px; 
      border: 1px solid #EEEEEE; 
      border-top: none;
      
  }
- .portfolio__item {
-     width: 370px;
-     margin-right: 30px;
-     margin-bottom: 30px;
-     background: #FFFFFF;
-     border: 1px solid #EEEEEE;  
- }
- .portfolio__item:nth-child(3n) {
-     margin-right: 0;
- }
- .portfolio__item:nth-last-child(-n + 3) {
-     margin-bottom: 0;
- }
-   
- .portfolio-subject {
+  
+ &__subject {
      font-weight: 700;
      font-size: 18px;
      line-height: calc(36 / 18);
@@ -48,7 +56,7 @@
      margin-bottom: 4px;
  }
  
- .portfolio-desc {
+ &__desc {
      font-size: 16px;
      line-height: calc(30 / 16);
      margin-top: 0px;
@@ -56,15 +64,7 @@
      color: var(--main-desc-color);
  }
  
- .portfolio__link:hover, .portfolio__link:focus{
-     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
- }
- .portfolio__inf {
-     position: relative;
-     width: 370px;
-     height: 294px;
-     overflow: hidden;
- }
+}
  .overlay {
      position: absolute;
      top: 0;
