--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,47 +1,47 @@
 .team {
+    @extend %section;
+
     background-color: var(--background-team-color);
-}
 
-.team__list {
-    display: flex;
-}
-.team__item {
-    margin-right: 30px;
-}
-.team__item:last-child {
-    margin-right: 0;
-}
+    &__title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: calc(42 /36);
+        text-align: center;
+        color: var(--main-title-color);
+        margin-bottom: 50px;
+    }
 
-.team__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42 /36);
-    text-align: center;
-    color: var(--main-title-color);
-    margin-bottom: 50px;
+    &__list {
+        display: flex;
 }
-
-.team__card {
-    display: block;
+    &__item {
+        margin-right: 30px;
+        &:last-child {
+        margin-right: 0;
+    }
 }
-.team__item-card {
-    padding: 30px 0;
-    background:var(--background-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    &__card {
+        display: block;
 }
-.team__subject {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(19 / 16);
-    text-align: center;
-    color: var(--main-title-color);
-    margin: 0px 0px 10px 0px;
+    &__item-card {
+        padding: 30px 0;
+        background:var(--background-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
 }
-
-.team__desc {
-    font-size: 16px;
-    line-height: calc(19 / 16);
-    text-align: center;
-    margin-bottom: 16px;
+    &__subject {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: calc(19 / 16);
+        text-align: center;
+        color: var(--main-title-color);
+        margin: 0px 0px 10px 0px;
 }
+    &__desc {
+        font-size: 16px;
+        line-height: calc(19 / 16);
+        text-align: center;
+        margin-bottom: 16px;
+    }
+} 
